basic_style.css
a:link {
  color: #5555FF; /* light blue */
}

a:visited {
  color: #9955AA; /* light violet */
}

ipa {
  font-family: 'lucida sans unicode', 'segoe ui', monospace, sans-serif;
}

ipa strong {
    font-weight: 900;
    color: red;
}

small-caps {
  font-variant: small-caps;
}

overline {
  text-decoration: overline;
}

highlight {
    border: 1px solid red;
    padding: 4px 5px;
    border-radius: 15px;
    line-height: 2;
}

@font-face {
  font-family: high-lulani;
  src: url('highlulani.ttf');
}

high-lulani {
  font-family: lulani, high-lulani;
  font-size: larger;
  direction: rtl;
  unicode-bidi: bidi-override;
}

high-lulani::after {
    content: "\202c\00e8";
    font-size: 0;
}

high-lulani:hover {
  font-size: xx-large;
  font-weight: normal;
  padding: 0em 0.5em;
  cursor: none;
}

table high-lulani:hover {
    font-size: larger;
    font-weight: inherit;
    padding: inherit;
    cursor: inherit;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}

.nav-pane {
  text-align: left;
  width: 25%;
}

.content {
  display: flex;
  flex-direction: column;
  margin-left: 5%;
  width: 60%;
}

.content p {
  text-align: justify;
  margin-top: 0;
  margin-bottom: 0;
}

.content p.example {
  margin-top: 1em;
}

.content table {
	border-collapse: collapse;
}

.content td, .content th {
	border: 1px solid darkgrey;
    white-space: nowrap;
}

.content th {
  padding: 0 1em;
}

.content th a {
    color: inherit;
    text-decoration: inherit;
}

.content th:first-child {
  text-align: right;
}

.content td {
  text-align: center;
}

.content div.mobile-table {
  display: none;
}

.content .wordlist {
  border-left: 1px solid green;
  border-bottom: 2px solid green;
}

.content .universe {
    display: inline;
    font-family: serif;
}

.content label.folder {
    text-align: left;
}

.content input.folder {
    position: relative;
    top: 3em;
    left: 2em;
}

.content input.folder:checked + div.folding p {
    display: inherit;
}

.content div.folding p:not(:first-child):not(:last-child) {
  display: none;
}

.content span.tooltip::after {
    content: "?";
    font-size: smaller;
    vertical-align: super;
}

.content span.tooltip-text {
  display: none;
}

.content span.tooltip-text::before {
  content: "(";
  padding-left: 0.5em;
}

.content span.tooltip-text::after {
  content: ")"
}

.content span.tooltip:active .tooltip-text,
.content div.folding span.tooltip:hover .tooltip-text {
  display: inline;
  cursor: none;
}

.content span.tooltip .tooltip-text:hover {
  display: inline;
  cursor: none;
}

.content .nav-footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 1em;
  margin-bottom: 1em;
}

.content .copyright {
  font-size: smaller;
  font-family: serif;
  text-align: right;
  margin-top: 1em;
}

.no-breaks {
  white-space: nowrap;
}

@media screen and (max-width: 800px) {

  .flex {
    flex-direction: column;
  }

  .content {
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
  }

  .nav-pane {
    width: 100%;
  }

  .nav-pane::before {
    content: "Menu"
  }

  .nav-pane ul {
    display: none;
  }

  .nav-pane:hover ul {
    display: inherit;
  }

  .content div.folding:hover p:first-child::after {
    content: '\2191\2002 (contract)';
  }

  .content div.folding:hover p:not(:first-child):not(:last-child) {
    display: block;
  }

  .content span.tooltip:hover .tooltip-text {
    display: inline;
  }

  table {
    display: none;
  }

  .content div.mobile-table {
    display: block;
  }

  .content div.mobile-table table {
      display: block;
      margin-left: 15%;
  }
}

